--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,9 @@
 
     <name>xjc</name>
     <url>http://maven.apache.org</url>
-
+    <properties>
+        <jackson.version>2.9.9</jackson.version>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -30,17 +32,17 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
-            <version>2.8.1</version>
+            <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.8.1</version>
+            <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
-            <version>2.8.1</version>
+            <version>${jackson.version}</version>
         </dependency>
     </dependencies>
 </project>
